; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_symbol.c_dso__find_symbol.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_symbol.c_dso__find_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symbol = type { i32 }
%struct.dso = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.symbol* @dso__find_symbol(%struct.dso* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.dso*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.dso* %0, %struct.dso** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.dso*, %struct.dso** %4, align 8
  %8 = getelementptr inbounds %struct.dso, %struct.dso* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %6, align 4
  %14 = call %struct.symbol* @symbols__find(i32* %12, i32 %13)
  ret %struct.symbol* %14
}

declare dso_local %struct.symbol* @symbols__find(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
